--- a/src/main/webapp/WEB-INF/templates/permission/list.html
+++ b/src/main/webapp/WEB-INF/templates/permission/list.html
@@ -55,7 +55,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="x_content">
-                            <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target=".permission-modal" onclick="addPermission()"><span>新增</span></button>
+                            <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target=".permission-modal" onclick="addPermission()"><span>新增</span></button>
                             <table id="permissionTable" class="table table-hover table-bordered">
                                 <thead>
                                     <tr>
@@ -69,11 +69,11 @@
                                 <tbody>
                                 <tr th:each="permission,iterStat:${permissions}">
                                     <td th:text="${iterStat.count}"></td>
-                                    <td th:text="${permission.name}"></td>
+                                    <td><span class="label label-info" th:text="${permission.name}"></span></td>
                                     <td th:text="${permission.url}"></td>
                                     <td th:text="${permission.description}"></td>
                                     <td>
-                                        <button type="button" class="btn btn-info btn-xs" data-toggle="modal" data-target=".permission-modal" th:onclick="|editPermission(${permission.id})|"><i class="fa fa-edit"></i></button>
+                                        <button type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target=".permission-modal" th:onclick="|editPermission(${permission.id})|"><i class="fa fa-edit"></i></button>
                                         <button type="button" class="btn btn-dark btn-xs" th:onclick="|deletePermission(${permission.id})|"><i class="fa fa-trash"></i></button>
                                     </td>
                                 </tr>
